# prism-agent

./: .ruff.toml  MCP_SETUP.md  README.md  REFACTORING.md  docker-compose.yaml  main.py  pyproject.toml
src/: cli.py  commands.py  graph.py  mcp_client.py  mcp_utils.py  schemas.py  server.py  session.py  ui.py
