[project]
name = "prism-ai"
version = "0.1.0"
description = "Sandboxed LangGraph agent with tool-calling abilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.2",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langsmith>=0.4.34",
    "pydantic>=2",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "typer>=0.19.2",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
